--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+*{
+    Height: 30px;
+	margin: 0;
+	padding: 0;
+	font-family: 'Poppins';
+}
+.Section {
+    font-size: 20px;
+}
