--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,84 +1,26 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-*{
-	margin: 0;
-	padding: 0;
-	font-family: 'Poppins';
+
+* {
+    font-family: 'Poppins';
     box-sizing: border-box;
 }
-
-.title {
-
+h1 {
+    margin-bottom: 15px;
     padding: 10px;
     display:grid;
-    place-items:center; 
+    place-items:center;
 }
 
-.container {
-    display:flex;
-    justify-content: center;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.buff, .chicken, .veg {
-    width:400px;
-    position:relative;
-}
-.buff{
-    border: 2px solid black;
-    padding: 5px;
-    background-color:#a28089;
-    margin-right: 10px;
-    margin-left: 20px;
-}
-
-.chicken{
-    border: 2px solid black;
-    padding: 5px;
-    background-color:#a28089;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-.veg{
-    border: 2px solid black;
-    padding: 5px;
-    background-color:#a28089;
-    margin-right: 20px;
-    margin-left: 10px;
-}
-
-.btitle, .ctitle, .vtitle{
-    height: 30px;
-    width: 250px;
-    font-size: 20px;
-    position: absolute;
-    right:0;
-    margin-right: 10px;
-    border: 2px solid black;
-    display:grid;
-    place-items:center; 
-}
-
-.btitle{
-    background-color: #e5eaf5;
-}
-
-.ctitle{
-    background-color: #d0bdf4;
-}
-
-.vtitle{
-    background-color: #8458B3;
-}
-
-.content{
-    margin-top: 40px;
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
 }
 
 /********** Large devices only **********/
-@media (min-width: 992px){
+@media (min-width: 992px) {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+  }
   .col-lg-1 {
     width: 8.33%;
   }
@@ -90,6 +32,7 @@
   }
   .col-lg-4 {
     width: 33.33%;
+    height: 380px;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -118,7 +61,10 @@
 }
 
 /********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px){
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+  }
   .col-md-1 {
     width: 8.33%;
   }
@@ -136,6 +82,7 @@
   }
   .col-md-6 {
     width: 50%;
+    height: 350px;
   }
   .col-md-7 {
     width: 58.33%;
@@ -154,12 +101,97 @@
   }
   .col-md-12 {
     width: 100%;
+    height: 210px;
   }
 }
 
-/********For small device only**********/
-@media (min-width: 768px) and (max-width: 991px){
-  .col-md-12 {
+/********** Small devices only **********/
+@media (max-width: 767px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
     width: 100%;
   }
+}
+
+.buff, .chicken, .veg {
+    position:relative;
+    border:2px solid black;
+}
+
+.buff{
+    padding: 5px;
+    background-color:#a28089;
+}
+
+.chicken{
+    padding: 5px;
+    background-color:#a28089;
+}
+
+.veg{
+    padding: 5px;
+    background-color:#a28089;
+}
+
+.btitle, .ctitle, .vtitle{
+    height: 30px;
+    width: 250px;
+    font-size: 20px;
+    position: absolute;
+    right:0;
+    margin-right: 10px;
+    border: 2px solid black;
+    display:grid;
+    place-items:center; 
+}
+
+.btitle{
+    background-color: #e5eaf5;
+}
+
+.ctitle{
+    background-color: #d0bdf4;
+}
+
+.vtitle{
+    background-color: #8458B3;
+}
+
+.content{
+    margin-top: 32px;
 }
